Fix bug: navigation buttons visible in printing.

--- a/public/css/f4inx.css
+++ b/public/css/f4inx.css
@@ -179,7 +179,7 @@ a.sidebar-nav-item:focus {
     margin-top: unset;
     margin-bottom: -0.18em;  /* Align the cat */
   }
-  .sidebar nav, .pagination {
+  .sidebar nav {
     display: none;
   }
 }
@@ -266,6 +266,11 @@ a.sidebar-nav-item:focus {
 @media (min-width: 30em) {
   .pagination {
     margin-top: 3rem;
+  }
+}
+@media print {
+  .pagination {
+    display: none;
   }
 }
 
